--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   padding: 78px 0 172px 97px;
   gap: 49px;
+  overflow: hidden;
 
   @include tablet {
     padding: 60px 0 115px 67px;
